--- a/1 sign in/index.html
+++ b/1 sign in/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>log in 1</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,10 +13,12 @@
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" placeholder="Username" required>
+                <i class="fa-solid fa-user"></i>
             </div>
             <div class="input-box">
                 <input type="password"
                 placeholder="password" required>
+                <i class="fa-solid fa-lock"></i>
             </div>
 
             <div class="remember-forgot">
@@ -25,9 +28,10 @@
 
             <button type="submit" class="btn">Login</button>
             
-            <div class="register-link"><p>Don't have an account? <a href="#">Registe</a></p>
+            <div class="register-link"><p>Don't have an account? <a href="#">Register</a></p>
             </div>
         </form>
     </div>
+    
 </body>
 </html>
