--- a/1 sign in/index.html
+++ b/1 sign in/index.html
@@ -15,9 +15,9 @@
                 <input type="text" placeholder="Username" required>
                 <i class="fa-solid fa-user"></i>
             </div>
+
             <div class="input-box">
-                <input type="password"
-                placeholder="password" required>
+                <input type="password" placeholder="password" required>
                 <i class="fa-solid fa-lock"></i>
             </div>
 
@@ -32,6 +32,6 @@
             </div>
         </form>
     </div>
-    
+
 </body>
 </html>
