--- a/Doctor login/index.html
+++ b/Doctor login/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="remember-forgot">
-                <label><input type="checkbox">Remember me></label>
+                <label><input type="checkbox">Remember me-</label>
                 <a href="#">Forgot password?</a>
             </div>
 
@@ -31,7 +31,7 @@
             
             <div class="register-link"><p>Don't have an account? <a href="#">Register</a></p>
             </div>
-            
+
         </form>
     </div>
 
