--- a/User login/index.html
+++ b/User login/index.html
@@ -10,10 +10,15 @@
 <body>
     <div class="wrapper">
         <form action="">
-            <h1>Login</h1>
+            <h1>Sign in</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username" required>
+                <input type="text" placeholder="Full Name" required>
                 <i class="fa-solid fa-user"></i>
+            </div>
+
+            <div class="input-box">
+                <input type="text" placeholder="Email" required>
+                <i class="fa-solid fa-at"></i>
             </div>
 
             <div class="input-box">
@@ -21,12 +26,22 @@
                 <i class="fa-solid fa-lock"></i>
             </div>
 
+            <div class="input-box">
+                <input type="number" placeholder="Age" required>
+                <!-- <i class="fa-solid fa-user"></i> -->
+            </div>
+
+            <div class="input-box">
+                <input type="text" placeholder="Gender" required>
+                <!-- <i class="fa-solid fa-user"></i> -->
+            </div>
+
             <div class="remember-forgot">
                 <label><input type="checkbox">Remember me></label>
                 <a href="#">Forgot password?</a>
             </div>
 
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn">Sign in</button>
             
             <div class="register-link"><p>Don't have an account? <a href="#">Register</a></p>
             </div>
