--- a/Main/index.html
+++ b/Main/index.html
@@ -6,11 +6,17 @@
     <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <header>
-        <div class="navbar">
-            m
+        <div class="navbar ">
+            <div class="logo">
+                hello
+            </div>
         </div>
     </header>
     
