--- a/Main/index.html
+++ b/Main/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="navbar ">
             <div class="logo">
-                hello
+                hello!
             </div>
         </div>
     </header>
