--- a/Main/index.html
+++ b/Main/index.html
@@ -7,17 +7,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     
     <header>
-        <div class="navbar ">
-            <div class="logo">
-                hello!
-            </div>
-        </div>
+        <nav>
+             <ul class="sidebar">
+                <li><a href="#">logo</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Explore</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Sign in/log in</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">logo</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Explore</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Sign in/log in</a></li>
+                <li id="list"><a href="#"><i class="fa-solid fa-list"></i></a></li>
+
+            </ul>
+        </nav>
     </header>
     
 </body>
