--- a/Main/index.html
+++ b/Main/index.html
@@ -35,6 +35,18 @@
     </header>
     
     
+    <footer>
+        <div class="row">
+            <div class="col">
+                <img src="" class="logo">
+                <h4>logo</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ut saepe sint, eaque eligendi voluptatem molestias placeat maxime, similique fuga quidem tempora ex enim! Iure quasi a quod libero ducimus.</p>
+            </div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+    </footer>
     <script>
         function showSidebar(){
             const sidebar = document.querySelector('.sidebar');
