--- a/Main/index.html
+++ b/Main/index.html
@@ -42,9 +42,29 @@
                 <h4>logo</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ut saepe sint, eaque eligendi voluptatem molestias placeat maxime, similique fuga quidem tempora ex enim! Iure quasi a quod libero ducimus.</p>
             </div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+
+            <div class="col">
+                <h3>office</h3>
+                <p>ITPL Road</p>
+                <p>Whitefield, Banglalore</p>
+                <p>Karnataka, PIN 325218, India</p>
+                <p class="email-id">lucky@outlook.com</p>
+                <h4>+91 - 0123456789</h4>
+            </div>
+
+            <div class="col">
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
+            </div>
+
+            <div class="col">
+            </div>
         </div>
     </footer>
     <script>
