--- a/Main/index.html
+++ b/Main/index.html
@@ -54,18 +54,32 @@
 
             <div class="col">
                 <h3>Links</h3>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Features</a></li>
-                    <li><a href="">Contacts</a></li>
+                <ul class="links">
+                    <li class="links"><a class="links" href="">Home</a></li>
+                    <li class="links"><a class="links" href="">Services</a></li>
+                    <li class="links"><a class="links" href="">About Us</a></li>
+                    <li class="links"><a class="links" href="">Features</a></li>
+                    <li class="links"><a class="links" href="">Contacts</a></li>
                 </ul>
             </div>
 
             <div class="col">
+                <h3>Newsletter</h3>
+                <form>
+                    <i class="fa-regular fa-envelope"></i>
+                    <input type="email" placeholder="Enter your email-id" required>
+                    <button class="button-press" type="submit"><i class="fa-solid fa-arrow-right"></i></button>
+                </form>
+                <div class="social-icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
             </div>
         </div>
+        <hr>
+        <p class="copyright">CareMe © 2026 - All Rights Reserved</p>
     </footer>
     <script>
         function showSidebar(){
