--- a/Main/index.html
+++ b/Main/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Sign in/log in</a></li>
             </ul>
             <ul>
-                <li><a href="#">logo</a></li>
+                <li><a href="#"><img class="main-logo" src="main-logo.jpeg" alt="web-logo"></a></li>
                 <li class="hideOnMobile"><a href="#">Home</a></li>
                 <li class="hideOnMobile"><a href="#">Explore</a></li>
                 <li class="hideOnMobile"><a href="#">About</a></li>
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col">
                 <img src="" class="logo">
-                <h4>logo</h4>
+                <h3>CareMe</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ut saepe sint, eaque eligendi voluptatem molestias placeat maxime, similique fuga quidem tempora ex enim! Iure quasi a quod libero ducimus.</p>
             </div>
 
